# V2_rush_hour

./: CMakeLists.txt  Makefile  RAPPORT.odt  README  config2.txt  config5.txt  game.c  game_ar.txt  game_rh.txt  install.sh  jeu  main.c  main.c~  piece.c  sujet.txt  test_game  test_game1.c  test_piece1.c  uninstall.sh
Rapport/: Rapport.tex  couverture de code - gcov.odt  game.c.gcov  gcov_terminal.eps  git.odt  github.eps  piece.c.gcov  rapport_alienor.odt  structure de projet ET utilisation de cmake .odt  structure.eps  valgrind.odt
cmake_hierachie/: README
cmake_hierachie/game/: CMakeLists.txt
cmake_hierachie/jeu/: CMakeLists.txt
cmake_hierachique/: Makefile
cmake_hierachique/game/piece/: CMakeLists.txt
cmake_hierachique/jeu/: game_rh.txt
game/: CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake
game/game/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  game.c  test_game  test_game1.c
game/piece/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_piece  test_piece1.c
include/: file.h  hash.h  tree.h
jeu/: CMakeLists.txt~  main.c
rush_hour/: CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake  game_rh.txt  jeu  main.c
solver/: solver.c
src/: CMakeLists.txt  CMakeLists.txt~  config3.txt  config4.txt  file.c  file.h  game.c  game_ar.txt  game_rh.txt  main.c  piece.c  solveur  solveur.c  tree.c  tree.h
src/solveur/: file.c  hash.c  our_solveur.c  solveur.c  tree.c
src/test/: test_game.c
src/test-game/: test_game1.c  test_game2.c  test_game3.c  test_game4.c  test_game5.c
src/test-game/test_game_init/: test_game.c
src/test-piece/: test_piece1.c  test_piece2.c  test_piece3.c  test_piece4.c  test_piece5.c
